--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chatfuction",
   "version": "1.0.0",
   "description": "",
-  "main": "sever.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
